<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/textViewRegistrationLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_label"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_name_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_last_name_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextAge"
        app:layout_constraintTop_toBottomOf="@+id/editTextName"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/editTextAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
        tools:ignore="Autofill"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAge"
        tools:layout_editor_absoluteX="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>